# nixiv_tools

./: Cargo.toml  README.md  index.html  nixiv_tools-37b8d51d71418be8.js  nixiv_tools-37b8d51d71418be8_bg.wasm  nixiv_tools-e4e66bb49de5940b.js  nixiv_tools-e4e66bb49de5940b_bg.wasm  rust-toolchain  sw.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  endpoint.rs  lib.rs  main.rs
src/xiv/: item.rs  mod.rs  types.rs
universalis-api/: Cargo.toml
universalis-api/src/: endpoint.rs  lib.rs  worlds.rs
xivapi/: Cargo.toml
xivapi/src/: endpoint.rs  lib.rs
xivapi/src/models/: item.rs  mod.rs  types.rs
