[package]
name = "nixiv_tools"
version = "0.1.0"
authors = ["denixsucks <erylmzdnz@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

xivapi = { path = "xivapi" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
